# The-FREUID-Challenge-2026-IJCAI-ECAI

./: .gitignore  README.md  pyproject.toml
notebooks/: colab-freuid_neural_network_solution copy.ipynb  colab-freuid_neural_network_solution.ipynb  freuid_neural_network_solution.ipynb  kaggle-freuid_neural_network_solution.ipynb
src/fraud_model/: __init__.py  crop_fields.py  freuid_dataset.py  freuid_submition.py  model.py  region_detector.py  workflow.py
